# rklmm-tools-docker

./: .gitignore  Cargo.toml  README.md  pull.sh
.github/: dependabot.yml
.github/workflows/: build-wheel.yml  docker-build-runtime.yml  docker-build-toolkit.yml
runtime/: Cargo.toml  Dockerfile  runtime.c
runtime/src/: ffi.rs  lib.rs
runtime/src/librkllm/: __init__.py  _binding.py  asyncio.py
src/: completion.rs  main.rs
toolkit/: Dockerfile  rkllm_toolkit.sh  toolkit  toolkit.py
toolkit-cli/: pyproject.toml
toolkit-cli/src/rkllm/: __init__.py
