[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rkllm-toolkit-cli"
version = "1.0.1"
license = { text = "AGPL-3.0" }
requires-python = "~=3.8"
dependencies = [
    "numpy == 1.23.1",
    "transformers == 4.38.0",
    "torch == 1.12.0",
    "datasets == 2.14.5",
    "tqdm == 4.64.1",
    "sentencepiece == 0.1.97",
    "accelerate == 0.23.0",
    "protobuf == 3.20.1",
    "transformers-stream-generator == 0.0.4",
    "einops == 0.4.1",
    "tiktoken == 0.4.0",
    "tabulate == 0.9.0",
]

[project.scripts]
rkllm-toolkit-cli = "rkllm:main"

[tool.setuptools.package-data]
rkllm-toolkit-cli = ["*.so"]
